--- a/_deploy/apache.conf.template
+++ b/_deploy/apache.conf.template
@@ -1,8 +1,9 @@
+
 <VirtualHost *:80>
 #    ServerAdmin [ADMIN E-MAIL]
 
+    ServerName [DOMAINNAME]
 #    ServerAlias [DOMAINNAME]
-    DocumentRoot /home/[USERNAME]/sites/[DOMAINNAME]
 
     ErrorLog /home/[USERNAME]/sites/[DOMAINNAME]/log/apache-error.log
     CustomLog /home/[USERNAME]/sites/[DOMAINNAME]/log/apache-access.log combined
@@ -23,10 +24,7 @@
         </Files>
     </Directory>
 
-#    Alias /favicon.ico /home/[USERNAME]/sites/[DOMAINNAME]/static/favicon.ico
-
-
-    WSGIDaemonProcess [PROJECTNAME] python-path=/home/[USERNAME]/sites/[DOMAINNAME]:/home/[USERNAME]/sites/[DOMAINNAME]/venv/lib/python2.7/site-packages
+    WSGIDaemonProcess [PROJECTNAME] python-path=/home/[USERNAME]/sites/[DOMAINNAME]/src:/home/[USERNAME]/sites/[DOMAINNAME]/venv/lib/python2.7/site-packages
     WSGIProcessGroup [PROJECTNAME]
     WSGIScriptAlias / /home/[USERNAME]/sites/[DOMAINNAME]/src/[PROJECTNAME]/wsgi.py
 
